--- a/doom-jfx/doomsrc/Makefile
+++ b/doom-jfx/doomsrc/Makefile
@@ -11,10 +11,12 @@ endif
 
 CC=  gcc  # gcc or g++
 
-#JAVA_INCLUDES=-I../../idoom/idoom -L$(O) -framework Foundation
-JAVA_INCLUDES=-I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin
+# JAVA_INCLUDES=-I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin
 # For a proper .dylib, you should enable Position-Independent Code (PIC) using -fPIC
-CFLAGS=-g -shared -dynamiclib -install_name @rpath/libmacosdoom.dylib -fPIC -Wall -DNORMALUNIX -DMACOS -DJNI # -DMACOSAPP
+# CFLAGS=-g -shared -dynamiclib -install_name @rpath/libmacosdoom.dylib -fPIC -Wall -DNORMALUNIX -DMACOS -DJNI
+
+JAVA_INCLUDES=-I../../idoom/idoom -L$(O) -framework Foundation
+CFLAGS=-g -shared -dynamiclib -install_name @rpath/libmacosdoom.dylib -fPIC -Wall -DNORMALUNIX -DMACOS -DMACOSAPP
 
 # subdirectory for objects
 O=build
